--- a/embassy-stm32/Cargo.toml
+++ b/embassy-stm32/Cargo.toml
@@ -107,7 +107,7 @@ stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", ta
 default = ["rt"]
 
 ## Enable to disable rcc frequency detection
-unsafe-frequency-check = []
+unsafe-no-frequency-check = []
 
 ## Enable `stm32-metapac`'s `rt` feature
 rt = ["stm32-metapac/rt"]
